more splash page styling; cyan and green color pallete; background image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <script type="text/javascript">
       window.fishbook_logo = "<%= asset_path('fishhook.png') %>"
     </script>
+        <script type="text/javascript">
+      window.splash_background = "<%= asset_path('splash_background.jpg') %>"
+    </script>
   </head>
 
   <body>
