--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,13 +1,13 @@
 .footer {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  height: 150px;
-  background-color: lightblue;
+  height: 100px;
+  background-color: ivory;
   display: flex;
   justify-content: center;
 }
 
 .footer p {
-  margin-top: 20px;
+  margin-top: 50px;
   color: grey;
 }
