--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -2,7 +2,7 @@
   width: 950px;
   padding-top: 80px;
   margin: 0 auto;
-  background-color: lightgray;
+  background-color: #e0e0e0;
   border: none;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
   width: 950px;
   padding-top: 28px;
   margin: 0 auto;
-  background-color: lightgray;
+  background-color: #e0e0e0;
   border: none;
   display: flex;
   flex-direction: column;
