footer and other changes

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -2,6 +2,7 @@
   width: 950px;
   padding-top: 80px;
   margin: 0 auto;
+  margin-bottom: 5px;
   background-color: #e0e0e0;
   border: none;
   display: flex;
