--- a/app/assets/stylesheets/splash/footer.scss
+++ b/app/assets/stylesheets/splash/footer.scss
@@ -2,12 +2,12 @@
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   height: 100px;
-  background-color: ivory;
+  background-color: white;
   display: flex;
   justify-content: center;
 }
 
 .footer p {
-  margin-top: 50px;
+  margin-top: 40px;
   color: grey;
 }
