--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -35,7 +35,8 @@
   border-radius: 2px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  // background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  background-image: image-url("generic-profile.jpeg");
 }
 
 .post_profile_photo:hover {
