more profile photo changes

--- a/app/assets/stylesheets/users/friend_index_item.scss
+++ b/app/assets/stylesheets/users/friend_index_item.scss
@@ -27,7 +27,8 @@
   border: 3px solid whitesmoke;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  // background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  background-image: image-url("generic-profile.jpeg");
 }
 
 .friend_full_name {
