--- a/app/assets/stylesheets/users/friend_requests_dropdown.scss
+++ b/app/assets/stylesheets/users/friend_requests_dropdown.scss
@@ -80,7 +80,8 @@
   border: 3px solid whitesmoke;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  // background-image: url("https://www.helpscout.com/images/blog/steve-jobs.jpg");
+  background-image: image-url("generic-profile.jpeg");
 }
 
 .requester_full_name {
